# electrify

./: .gitignore  CMakeLists.txt  Makefile  README.md  electrify.sublime-project  electrifyingstunt.qrc  glrenderer.cpp  main.cpp  main.qml
engine/: -Wall  CMakeLists.txt  Makefile  README.md  build.sh
engine/documentation/: Doxyfile  README.txt
engine/documentation/html/: annotated.html  class_color-members.html  class_color.html  class_component-members.html  class_component.html  class_engine-members.html  class_engine.html  class_group-members.html  class_group.html  class_pixel-members.html  class_pixel.html  classes.html  color_8h_source.html  component_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  engine_8h_source.html  files.html  group_8h_source.html  index.html  parameter_8h_source.html  pixel_8h_source.html
engine/documentation/html/search/: classes_0.js  searchdata.js
engine/documentation/latex/: annotated.tex  class_color.tex  class_component.tex  class_engine.tex  class_group.tex  class_pixel.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex
engine/include/: color.h  component.h  engine.h  group.h  includesGoHere.txt  observer.h  parameter.h  pixel.h  signal.h
engine/libs/CppReact/: CMakeLists.txt
engine/libs/RxCpp/: CMakeLists.txt
engine/libs/cereal/: CMakeLists.txt
engine/libs/cxx_prettyprint/: CMakeLists.txt
engine/libs/jsoncpp/: CMakeLists.txt
engine/libs/libnoise/: CMakeLists.txt
engine/src/: Makefile  Observer.cpp  basic_component.h  basic_component.tpp  blueprint.cpp  blueprint.h  color.cpp  color.h  color_doubler.cpp  color_doubler.h  component.cpp  component.h  component.tpp  compound_component.cpp  compound_component.h  compound_component.tpp  constant_color_component.cpp  constant_color_component.h  constants.h  engine.cpp  engine.h  fragment_context.cpp  fragment_context.h  frame_context.h  globals.h  group.cpp  group.h  incrementer.cpp  incrementer.h  loader.cpp  loader.h  model.h  observer.cpp  observer.h  output.cpp  output.h  parameter.cpp  parameter.h  parameter.tpp  pixel.cpp  (+13 more)
engine/src/blueprint/: basic_component.tpp  basic_node.h  basic_node.hpp  basic_node.tpp  blueprint.cpp  blueprint.h  blueprint.hpp  blueprint_project.cpp  blueprint_project.h  blueprint_project.hpp  component.cpp  component.h  component.tpp  component_registrar.cpp  component_registrar.h  component_registrar.tpp  compound_component.cpp  compound_component.h  compound_component.tpp  compound_node.cpp  compound_node.h  compound_node.hpp  compound_node.tpp  context_modifier_component.cpp  context_modifier_component.h  context_modifier_node.cpp  context_modifier_node.h  context_modifier_node.hpp  data_conversion_manager.cpp  node.cpp  node.h  node.hpp  node.tpp  node_handle.cpp  node_handle.h  node_handle.hpp  node_registrar.cpp  node_registrar.h  node_registrar.hpp  node_registrar.tpp  (+14 more)
engine/src/blueprint/serializers/: blueprint_project_serializer.h  blueprint_serializer.h  compound_node_handle_serializer.h  node_handle_serializer.h  node_signal_serializer.h  node_socket_serializer.h  node_wire_serializer.h
engine/src/blueprint_ui/: component_grid.cpp  component_grid.h  component_grid_item.cpp  component_grid_item.h  engine_ui.cpp  engine_ui.h  grid_item_coordinator.cpp  node_grid.cpp  node_grid.h  node_grid_item.cpp  node_grid_item.h  node_grid_wire.cpp  node_grid_wire.h
engine/src/components/: color_doubler.cpp  color_doubler.h  constant_color_component.cpp  constant_color_component.h  constant_component.cpp  constant_component.h  hsv_component.cpp  hsv_component.h  incrementer.cpp  incrementer.h  multiply_component.cpp  multiply_component.h  perlin_noise_component.cpp  perlin_noise_component.h  pixel_x_component.cpp  pixel_x_component.h  square_wave.cpp  square_wave.h  time_component.cpp  time_component.h  translate_component.cpp  translate_component.h  translate_component.tpp
engine/src/components/oscillators/: saw_wave.cpp  saw_wave.h  sawtooth_wave.cpp  sawtooth_wave.h  sin_wave.cpp  sin_wave.h  square_wave.cpp  square_wave.h  waveform.cpp  waveform.h
engine/src/components/transforms/: scalar_transform.cpp  scalar_transform.h  scale_transform.h
engine/src/core/: color.cpp  color.h  engine.cpp  engine.h  fragment_context.h  frame_context.h  group.cpp  group.h  model.cpp  model.h  output.cpp  output.h  pixel.cpp  pixel.h  project.cpp  project.h  project.hpp  project_file.cpp  project_file.h  project_file.hpp  project_serializer.cpp  project_serializer.h  rasterization_thread.cpp  rasterization_thread.h  renderable.h  renderer.cpp  renderer.h  session.cpp  session.h
engine/src/core/serializers/: group_serializer.h  model_serializer.h  pixel_serializer.h  project_class_serializer.h
engine/src/core/visitors/: model_visitor.h  pixel_visitor.h
engine/src/nodes/: color_doubler.cpp  color_doubler.h  color_doubler.hpp  constant_color_node.cpp  constant_color_node.h  constant_color_node.hpp  constant_node.cpp  constant_node.h  constant_node.hpp  hsv_node.cpp  hsv_node.h  hsv_node.hpp  incrementer.cpp  incrementer.h  incrementer.hpp  nodes.h  perlin_noise_node.cpp  perlin_noise_node.h  perlin_noise_node.hpp  pixel_x_node.cpp  pixel_x_node.h  pixel_x_node.hpp  time_node.cpp  time_node.h  time_node.hpp  translate_node.cpp  translate_node.h  translate_node.hpp
engine/src/nodes/oscillators/: oscillators.h  saw_wave.cpp  saw_wave.h  (+10 more)
engine/src/utils/: container_utils.h  data_proxy.h  data_proxy.tpp  event_queue.cpp  event_queue.h  observable_map.cpp  observable_map.h  observable_vector.h  observable_vector.tpp  observes.h  observes.tpp  proxy_bridge.cpp  proxy_bridge.h  smart_ptr_utils.h  template_utils.h  virtual_enable_shared_from_this.h
engine/test/: CMakeLists.txt  test_blueprints.cpp
engine/test/blueprint/: test_blueprint.cpp
engine/test/tests/: test_blueprints.cpp  test_components.cpp
engine/tests/: build.sh  main  main.cpp  test_blueprints.cpp  test_components.cpp
testapp/: CMakeLists.txt  app  app.cpp  app.h  build.sh
(+366 files in other folders)
